provide consistent localization

--- a/custom_components/solarman_api/translations/en.json
+++ b/custom_components/solarman_api/translations/en.json
@@ -36,13 +36,13 @@
         "name": "AC voltage"
       },
       "daily_production": {
-        "name": "Daily Production"
+        "name": "Daily production"
       },
       "daily_production_1": {
-        "name": "Daily Production 1"
+        "name": "Daily production 1"
       },
       "daily_production_2": {
-        "name": "Daily Production 2"
+        "name": "Daily production 2"
       },
       "dc_current_pv1": {
         "name": "DC current PV2"
@@ -63,16 +63,16 @@
         "name": "DC voltage PV2"
       },
       "radiator_temp": {
-        "name": "radiator temperature"
+        "name": "Radiator temperature"
       },
       "total_production": {
-        "name": "Total Production"
+        "name": "Total production"
       },
       "total_production_1": {
-        "name": "Total Production 1"
+        "name": "Total production 1"
       },
       "total_production_2": {
-        "name": "Total Production 2"
+        "name": "Total production 2"
       }
     }
   },
